Minor changes to website

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://zeerakb1.github.io/portfolio",
-  "name": "portfolio",
+  "homepage": "http://zeerakb1.github.io/",
+  "name": "zeerakb1.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
