--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^4.0.3",
     "react-social-icons": "^5.6.1",
     "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.1",
     "typewriter-effect": "^2.18.2",
     "use-dark-mode": "^2.3.1",
